tests/NormalTests/paczka1/fuzzy1/45573414.err
Error in line 2: A567 A382 96,0
Error in line 10: YwxW A38L 87,6
Error in line 6: rvzV A567 74,0
Error in line 21: rvzV A319 29,8
Error in line 24: A567 A319 55,9
Error in line 27: cOL A382 77,1
Error in line 35: itvmo4u A382 32,5
